fixed text aligning in wondow header

--- a/app/assets/stylesheets/modules/common.sass
+++ b/app/assets/stylesheets/modules/common.sass
@@ -101,6 +101,7 @@ dialog.mdl-dialog
       h4
         margin: 0
         font-family: 'Roboto-Light' !important
+        text-align: center
       .mdl-button
         font-size: 22px
         background: #FFFFFF
